# tool_template

./: .env.development.example  .env.example  .gitignore  CLAUDE.md  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  justfile
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  backend_pre_start.py  ensure_database.py  helpers.py  initial_data.py  main.py  prestop_check.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 145b46b7993d_init.py  c13f77c69939_add_metrics.py  d4e8a1b2c3f4_add_user_hashed_password.py  e2f3a4b5c6d7_rename_user_email_to_username.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: utils.py
backend/app/api/routes/_shared/: enums.py  models.py  repository.py  service.py
backend/app/api/routes/_template/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/api/routes/login/: repository.py  routes.py  schemas.py  service.py
backend/app/api/routes/run/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/api/routes/run_step/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/api/routes/user/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/api/routes/user_tokens/: __init__.py  models.py
backend/app/core/: background_tasks.py  cache.py  config.py  db.py  security.py
backend/app/workflows/: example_workflow.py
backend/app/workflows/utils/: functions.py  loggers.py  metrics.py
backend/scripts/: new_table.py  prestart.sh  start.sh
frontend/: .gitignore  (+13 more)
(+48 files in other folders)
